--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-Flask==2.3.2
-scikit-learn==1.2.0
-numpy==1.23.5
-pandas==1.5.2
-matplotlib==3.6.2
+blinker==1.8.2
+click==8.1.7
+Flask==3.0.3
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+numpy==2.1.1
+Werkzeug==3.0.4
